cmake_minimum_required(VERSION 3.22)


# ##### 代码随想录 ##### #
# ===== 回溯算法 ===== #
#add_executable(try_530 src/try_530.cpp)
#add_executable(try_501 src/try_501.cpp)
#add_executable(try_236 src/try_236.cpp)
#add_executable(try_235 src/try_235.cpp)
#add_executable(try_701 src/try_701.cpp)
#add_executable(try_450 src/try_450.cpp)
#add_executable(try_669 src/try_669.cpp)
#add_executable(try_108 src/try_108.cpp)
#add_executable(try_538 src/try_538.cpp)
#add_executable(try_106 src/try_106.cpp)
#add_executable(try_105 src/try_105.cpp)
#add_executable(try_77 src/try_77.cpp)
#add_executable(try_216 src/try_216.cpp)
#add_executable(try_216_2 src/try_216_2.cpp)
#add_executable(try_17 src/try_17.cpp)
#add_executable(try_39 src/try_39.cpp)
#add_executable(try_40 src/try_40.cpp)
#add_executable(try_131 src/try_131.cpp)
#add_executable(try_131_2 src/try_131_2.cpp)
#add_executable(try_93 src/try_93.cpp)
#add_executable(try_78 src/try_78.cpp)
#add_executable(try_90 src/try_90.cpp)
#add_executable(try_491 src/try_491.cpp)
#add_executable(try_46 src/try_46.cpp)
#add_executable(try_47 src/try_47.cpp)
#add_executable(try_40_2 src/try_40_2.cpp)
#add_executable(try_47_2 src/try_47_2.cpp)
#add_executable(try_332 src/try_332.cpp)
#add_executable(try_332_over_time src/try_332_over_time.cpp)
#add_executable(try_332_2 src/try_332_2.cpp)
#add_executable(try_51 src/try_51.cpp)
#add_executable(try_37 src/try_37.cpp)

# ===== 贪心算法 ===== #
#add_executable(try_455 src/try_455.cpp)
#add_executable(try_376 src/try_376.cpp)
#add_executable(try_53 src/try_53.cpp)
#add_executable(try_122 src/try_122.cpp)
#add_executable(try_55 src/try_55.cpp)
#add_executable(try_45 src/try_45.cpp)
#add_executable(try_45_over_time src/try_45_over_time.cpp)
#add_executable(try_45_2 src/try_45_2.cpp)
#add_executable(try_1005 src/try_1005.cpp)
#add_executable(try_134 src/try_134.cpp)
#add_executable(try_134_2 src/try_134_2.cpp)
#add_executable(try_135 src/try_135.cpp)
#add_executable(try_860 src/try_860.cpp)
#add_executable(try_406 src/try_406.cpp)
#add_executable(try_406_2 src/try_406_2.cpp)
#add_executable(try_452 src/try_452.cpp)
#add_executable(try_435 src/try_435.cpp)
#add_executable(try_763 src/try_763.cpp)
#add_executable(try_56 src/try_56.cpp)
#add_executable(try_738 src/try_738.cpp)
#add_executable(try_714 src/try_714.cpp)
#add_executable(try_968 src/try_968.cpp)

# ===== 动态规划 ===== #
#add_executable(try_509 src/try_509.cpp)
#add_executable(try_70 src/try_70.cpp)
#add_executable(try_746 src/try_746.cpp)
#add_executable(try_62 src/try_62.cpp)
#add_executable(try_62_2 src/try_62_2.cpp)
#add_executable(try_63 src/try_63.cpp)
#add_executable(try_343 src/try_343.cpp)
#add_executable(try_343_2 src/try_343_2.cpp)
#add_executable(try_96 src/try_96.cpp)
#add_executable(try_bag01 src/try_bag01.cpp)
#add_executable(try_416 src/try_416.cpp)
#add_executable(try_1049 src/try_1049.cpp)
#add_executable(try_494 src/try_494.cpp)
#add_executable(try_494_2 src/try_494_2.cpp)
#add_executable(try_474 src/try_474.cpp)
#add_executable(try_474_err src/try_474_err.cpp)
#add_executable(try_CompletePack src/try_CompletePack.cpp)
#add_executable(try_518 src/try_518.cpp)
#add_executable(try_377 src/try_377.cpp)
#add_executable(try_70_2 src/try_70_2.cpp)
#add_executable(try_322 src/try_322.cpp)
#add_executable(try_279 src/try_279.cpp)
#add_executable(try_139 src/try_139.cpp)
#add_executable(try_139_overtime src/try_139_overtime.cpp)
#add_executable(try_139_2_overtime src/try_139_2_overtime.cpp)
#add_executable(try_139_3 src/try_139_3.cpp)
#add_executable(try_multi_pack src/try_multi_pack.cpp)
#add_executable(try_198 src/try_198.cpp)
#add_executable(try_213 src/try_213.cpp)
#add_executable(try_121 src/try_121.cpp)
#add_executable(try_121_2 src/try_121_2.cpp)
#add_executable(try_122_2 src/try_122_2.cpp)
#add_executable(try_123 src/try_123.cpp)
#add_executable(try_123_err src/try_123_err.cpp)
#add_executable(try_188 src/try_188.cpp)
#add_executable(try_309 src/try_309.cpp)
#add_executable(try_714_2 src/try_714_2.cpp)
#add_executable(try_300 src/try_300.cpp)
#add_executable(try_300_overtime src/try_300_overtime.cpp)
#add_executable(try_674 src/try_674.cpp)
#add_executable(try_718 src/try_718.cpp)
#add_executable(try_1143 src/try_1143.cpp)
#add_executable(try_1035 src/try_1035.cpp)
#add_executable(try_53_2 src/try_53_2.cpp)
#add_executable(try_392 src/try_392.cpp)
#add_executable(try_115 src/try_115.cpp)
#add_executable(try_583 src/try_583.cpp)
#add_executable(try_72 src/try_72.cpp)
#add_executable(647 src/647.cpp)
#add_executable(try_647_2 src/try_647_2.cpp)
#add_executable(try_516 src/try_516.cpp)

# ===== 单调栈 ===== #
#add_executable(try_739 src/try_739.cpp)
#add_executable(try_739_overtime src/try_739_overtime.cpp)
#add_executable(try_496 src/try_496.cpp)
#add_executable(try_503 src/try_503.cpp)
#add_executable(try_42 src/try_42.cpp)
#add_executable(try_84 src/try_84.cpp)
